namespace Project.Modules.Notifications.Domain.Notifications;

public enum NotificationType
{
    Info,
    Warning,
    Success
}
