namespace Project.Modules.Portfolio.Domain.Portfolios;

public enum RiskProfile
{
    Conservative,
    Moderate,
    Aggressive
}
